force-app/main/default/objects/sked__Templated_Job_Dependency__c/sked__Templated_Job_Dependency__c.object-meta.xml
<CustomObject>
    <label>Templated Job Dependency</label>
    <nameField>
        <displayFormat>TJD-{00000}</displayFormat>
        <label>Templated Job Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>