force-app/main/default/objects/sked__Templated_Job_Dependency__c/fields/sked__From_Templated_Job__c.field-meta.xml
<CustomField>
    <fullName>sked__From_Templated_Job__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>From Templated Job</label>
    <referenceTo>sked__Templated_Job__c</referenceTo>
    <relationshipLabel>Templated Job Dependencies From</relationshipLabel>
    <relationshipName>Templated_Job_Dependencies_From</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>