force-app/main/default/objects/sked__Templated_Job_Dependency__c/fields/sked__To_Anchor__c.field-meta.xml
<CustomField>
    <fullName>sked__To_Anchor__c</fullName>
    <label>To Anchor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
                <default>true</default>
                <label>Start</label>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>