force-app/main/default/objects/sked__Templated_Job_Dependency__c/fields/sked__To_Anchor_Max_Offset_Minutes__c.field-meta.xml
<CustomField>
    <fullName>sked__To_Anchor_Max_Offset_Minutes__c</fullName>
    <label>To Anchor Max Offset Minutes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>