force-app/main/default/objects/sked__Templated_Job_Dependency__c/validationRules/sked__FromTemplJob_and_ToTemplJob_different.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__FromTemplJob_and_ToTemplJob_different</fullName>
    <active>true</active>
    <description>FromTemplatedJob and ToTemplatedJob must reference two different templated jobs</description>
    <errorConditionFormula>sked__From_Templated_Job__r.Id = sked__To_Templated_Job__r.Id</errorConditionFormula>
    <errorMessage>FromTemplatedJob and ToTemplatedJob must reference two different templated jobs.</errorMessage>
</ValidationRule>