force-app/main/default/objects/sked__Templated_Job_Dependency__c/validationRules/sked__Min_Offset_not_greater_than_Max_Offset.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Min_Offset_not_greater_than_Max_Offset</fullName>
    <active>true</active>
    <description>ToAnchorMinOffsetMinutes cannot be greater than ToAnchorMaxOffsetMinutes.</description>
    <errorConditionFormula>sked__To_Anchor_Min_Offset_Minutes__c &gt; sked__To_Anchor_Max_Offset_Minutes__c</errorConditionFormula>
    <errorMessage>ToAnchorMinOffsetMinutes cannot be greater than ToAnchorMaxOffsetMinutes.</errorMessage>
</ValidationRule>