force-app/main/default/objects/sked__Templated_Job_Dependency__c/validationRules/sked__Min_Offset_or_Max_Offset_or_both.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Min_Offset_or_Max_Offset_or_both</fullName>
    <active>true</active>
    <description>Either ToAnchorMinOffsetMinutes or ToAnchorMaxOffsetMinutes must be specified, or both.</description>
    <errorConditionFormula>AND(
  ISBLANK(sked__To_Anchor_Min_Offset_Minutes__c),
  ISBLANK(sked__To_Anchor_Max_Offset_Minutes__c)
)</errorConditionFormula>
    <errorMessage>ToAnchorMinOffsetMinutes and ToAnchorMaxOffsetMinutes cannot be both unspecified.</errorMessage>
</ValidationRule>